# Sindlish

./: README.md  ROADMAP.md  SINDLISH_FEATURE_ROADMAP.md  benchmark.py  dictionary.json  hello.sd  hello.sind  install.sh  installer.iss  logo.af  main.py  offline_docs.txt  pyproject.toml  run_benchmarks.py  run_benchmarks_cli.py  test.py  test.sd  test.sind  todo.md  transpiler.py  update_extension.bat
ast_sind/: nodes.py
bench/: temp.sd
interpreter/: __init__.py  ast_nodes.py  builtins.py  compiler.py  env.py  errors.py  executor.py  frame.py  keywords.py  lexer.py  opcodes.py  parser.py  repl.py  resolver.py  tokens.py  vm.py
lexer/: keywords.py  tokenizer.py  tokens.py
parser/: parser.py
scratch/: simple_cast.sd  test_input_cast.sd  test_typecast.sd
tests/: conftest.py  helpers.py  test_arithmetic.py  test_booleans.py  test_builtins.py  test_comments.py  test_comparisons.py  test_constants.py  test_dict_methods.py  test_dicts.py  test_errors.py  test_if_else.py  test_list_methods.py  test_lists.py  test_logical_ops.py  test_loops.py  test_panic_stmt.sd  test_panic_unwrap.sd  test_print.py  test_results.sd  test_set_methods.py  test_sets.py  test_strings.py  test_typed_variables.py  test_variables.py  test_while.py
tools/: generate_grammar.py  generate_icons.py  lint.py  sindlish.icns
vscode-extension/: .gitignore  README.md  language-configuration.json  package-lock.json  package.json  sindlish-0.1.0.vsix  sindlish-lang-1.0.0.vsix  sindlish-lang-1.0.1.vsix  sindlish-lang-2.0.0.vsix  sindlish-lang-2.1.1.vsix  sindlish-lang-3.0.3.vsix  tsconfig.json  (+3 more)
(+33 files in other folders)
