[project]
name = "sindlish"
version = "0.1.0"
description = "Sindlish is a localized high-level programming language. It is inspired by Python and it is in roman sindhi."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
]

[project.scripts]
sindlish = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyinstaller",
]
